css/styles.css
/* Global */
:root {
  --animation-border-color-start: transparent;
  --animation-border-color-end: rgb(240, 240, 240);
  --super-short-transition: 0.2s;
  --short-transition: 0.4s;
  --long-transition: 0.7s;
  --super-long-transition: 2s;
  --color-back: rgb(40, 40, 40);
  --color-sec: rgb(240, 240, 240);
  --color-font: rgb(240, 240, 240);
}

* {
  padding: 0;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  scroll-behavior: smooth;
  -webkit-tap-highlight-color: transparent; /* Non-standard property: Safari and Firefox calls property as invalid in inspect mode */
}

body {
  background-color: var(--color-back);
  color: var(--color-font);
  transition: var(--short-transition);
  overflow-y: scroll;
  overflow-x: hidden;
  animation: loading 2s linear;
}

main {
  position: relative;
}

section, div, footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

section header {
  font-size: 24px;
  padding: 50px;
}

section {
  margin: 50px auto;
}

@keyframes loading {
  from {filter: blur(100px);}
  to {filter: blur(0);}
}

/* Nav Section */
.nav-bar,
.nav-group,
.nav-link {
  display: flex;
  align-items: center;
  transition: var(--long-transition);
}

.nav-bar {
  justify-content: space-between;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 60px;
  background-color: var(--color-sec);
  z-index: 999;
}

.nav-group {
  list-style: none;
  justify-content: center;
  gap: 60px;
}

.nav-link {
  color: black;
  text-decoration: none;
  font-size: 20px;
  height: 60px;
}

.nav-link:hover {
  background-color: gray;
  color: rgb(240, 240, 240);
}

.nav-link,
.nav-ctnr.toggler-ctnr {
  padding: 0 20px;
}

.nav-ctnr {
  margin-left: 60px;
  transition: var(--long-transition);
}

.nav-ctnr.toggler-ctnr {
  margin-left: 0;
  margin-right: 60px;
}

.toggler {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 30px;
  outline: none;
}

.toggler:hover {
  border-radius: 20px;
  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
}

#toggle {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  display: flex;
  align-items: center;
  position: absolute;
  inset: 0;
  background-color: grey;
  border-radius: 20px;
  cursor: pointer;
}

.slider:before {
  position: absolute;
  content: "";
  height: 22px;
  width: 22px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  border-radius: 50%;
  transition: var(--short-transition);
}

#toggle:checked + .slider {
  background-color: rgb(0, 127, 255);
}

#toggle:checked + .slider:before {
  transform: translateX(30px);
}

#toggle:focus + .slider {
  box-shadow: 0 0 1px rgb(0, 127, 255);
}

/* About Section */

#home {
  flex-direction: column;
  width: 100%;
  height: 100vh;
  text-align: center;
}

#intro-header {
  font-size: 3.5em;
  padding: 30px;
  transition: var(--short-transition);
}

#intro-statement {
  white-space: nowrap;
  border-right: 2px solid var(--color-sec);
  width: 330px;
  top: 57%;
  font-size: 2em;
  overflow: hidden;
  transition: var(--short-transition);
  animation:
    typing 2s steps(21) 3.5s 1 normal both,
    blinking 800ms steps(21) infinite;
}

@keyframes typing {
  from {width: 0%;}
  to {width: 330px;}
}

@keyframes blinking {
  from, to {border-color: var(--animation-border-color-start);}
  50% {border-color: var(--animation-border-color-end);}
}

/* About Section */

#about {
  flex-direction: column;
  text-align: center;
  scroll-margin-top: 30px;
  transition: var(--short-transition);
}

.about-container {
  width: 80%;
  gap: 50px;
}

.about-me {
  font-size: 1.1rem;
  width: max(60%, 340px);
  line-height: 2rem;
}

.self-photo {
  width: max(20vw, 180px);
  z-index: -1;
  opacity: 0.7;
}

/* Project Section */

#projects {
  flex-direction: column;
  justify-content: flex-start;
  scroll-margin-top: 30px;
  margin-bottom: 50px;
  transition: var(--short-transition);
}

.project-container {
  gap: 60px;
  flex-wrap: wrap;
  transition: var(--long-transition);
}

.project-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 400px;
  width: 300px;
  border: none;
  border-radius: 20px;
  overflow: hidden;
  text-decoration: none;
  transition: 
    opacity var(--short-transition),
    transform var(--short-transition),
    border var(--short-transition);
}

.card-top {
  position: relative;
  height: 80%;
  width: 100%;
}

.card-top .project-description {
  position: absolute;
  text-align: center;
  width: 85%;
  opacity: 0;
  color: black;
}

.card-bottom {
  height: 20%;
  width: 100%;
  background-color: rgb(80, 80, 80);
  color: rgb(240, 240, 240);
  font-size: clamp(16px, 20px, 24px);
 }

.project-card:hover {
  opacity: 0.8;
  transform: scale(1.1);
  transform-origin: center;
  box-shadow: 0 0 10px 5px orange;
}

.project-card:hover img {
  filter: blur(10px);
  transition: var(--super-short-transition);
}

.project-card:hover div {
  opacity: 1;
}

.project-description.darkBackground {
  color: white;
}

#documentation-project,
#digital-clock,
#js-calculator,
#weather-app {
  position: relative;
  height: 100%;
  object-fit: cover;
}

/* Footer */
footer {
  display: flex;
  flex-direction: column;
  margin-top: 50px;
  height: 15vh;
  gap: 20px;
}

.social-container {
  gap: 20px;
}

.icon {
  display: unset;
  height: 40px;
  width: 40px;
  transition: transform var(--short-transition);
}

.github-icon {
  filter: brightness(100);
}

.social-container .icon:hover {
  animation: shake-n-grow 0.2s;
  transform: scale(1.1);
}

#created-by {
  transition: var(--short-transition);
}

@keyframes shake-n-grow {
  0% {transform: rotate(0deg) scale(1.02);}
  25% {transform: rotate(-5deg) scale(1.04);}
  50% {transform: rotate(0deg) scale(1.06);}
  75% {transform: rotate(5deg) scale(1.08);}
  100% {transform: rotate(0deg) scale(1.1);}
}

/* To Top Button */
#top-btn-container {
  position: fixed;
  bottom: 30px;
  right: 30px;
  flex-direction: column;
  gap: 10px;
}

.top-button {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid black;
  height: 40px;
  width: 40px;
  background-color: rgb(240, 240, 240);
  transition: border var(--short-transition);
}

.top-button:hover {
  border: 1px solid white;
}

.top-button .icon {
  height: 20px;
  width: 20px;
}

/* Responsive */
@media (max-width: 768px) {
  .nav-group {
    gap: 40px;
  }

  .project-card {
    height: 350px;
    width: 250px;
  }

  .project-card:hover {
    transform-origin: center;
  }

  .self-photo {
    display: none;
  }

  .about-me {
    line-height: 1.8em;
  }

  footer {
    margin-bottom: 80px;
  }
}

@media (max-width: 650px) {
  .nav-group {
    gap: 20px;
  }
}

@media (max-width: 600px) {
  .nav-group {
    gap: 10px;
  }
  
  .project-container {
    gap: 40px;
  }
}

@media (max-width: 550px) {
  .nav-link {
    padding: 0 15px;
  }

  .nav-ctnr {
    margin-left: 40px;
  }

  .nav-ctnr.toggler-ctnr {
    margin-right: 40px;
  }
}

@media (min-width: 480px) {
  #intro-statement {
    width: 330px;
    font-size: 2rem;
    transition: var(--short-transition);
  }

  @keyframes typing {
    from {width: 0%;}
    to {width: 330px;}
  }}

@media (max-width: 480px) {
  #intro-header {
    font-size: 2.5rem;
  }

  #intro-statement {
    width: 250px;
    font-size: 1.5rem;
  }

  @keyframes typing {
    from {width: 0%;}
    to {width: 250px;}
  }

  .nav-link,
  .nav-ctnr.toggler-ctnr {
    padding: 0 5px;
  }

  .nav-ctnr {
    margin-left: 20px;
  }

  .nav-ctnr.toggler-ctnr {
    margin-right: 20px;
  }
}

@media (max-width: 360px) {
  .nav-link {
    font-size: 1.1rem;
  }
}

@media (max-width: 280px) {
  .nav-ctnr {
    margin-left: 10px;
  }

  .nav-ctnr.toggler-ctnr {
    margin-right: 10px;
  }  

  #intro-header {
    font-size: 2.1rem;
  }

  #intro-statement {
    width: 180px;
    font-size: 1.1rem;
  }

  @keyframes typing {
    from {width: 0%;}
    to {width: 180px;}
  }

  .about-me {
    font-size: 1rem;
    width: 90%;
  }

  .nav-link {
    font-size: 1rem;
  }

  #created-by {
    font-size: 0.9rem;
  }
}

